<resources>
    <string name="app_name">word jumble</string>
    <string name="start">start</string>
    <string name="WordJumble">Word Jumble</string>
    <string name="clue">clue</string>
    <string name="word">word</string>
    <string name="clue1">something you sit on ?</string>
    <string name="clue2">liquid  you shouls drink a lot</string>
    <string name="clue3">objec that  you use for communication</string>
    <string name="A">A</string>
    <string name="B">B</string>
    <string name="C">C</string>
    <string name="D">D</string>
    <string name="E">E</string>
    <string name="F">F</string>
    <string name="G">G</string>
    <string name="H">H</string>
    <string name="I">I</string>
    <string name="J">J</string>
    <string name="K">K</string>
    <string name="L">L</string>
    <string name="M">M</string>
    <string name="N">N</string>
    <string name="O">O</string>
    <string name="P">P</string>
    <string name="Q">Q</string>
    <string name="R">R</string>
    <string name="S">S</string>
    <string name="T">T</string>
    <string name="U">U</string>
    <string name="V">V</string>
    <string name="W">W</string>
    <string name="Y">Y</string>
    <string name="Z">Z</string>
    <string name="answer">answer</string>
    <string name="SUBMIT">SUBMIT</string>
    <string name="COMPLETE">CONGRATULATION</string>
    <string name="GAMECOMPLETE">YOU COMPLETED THE GAME</string>
    <string name="a">a</string>
    <string name="b">b</string>
    <string name="c">c</string>
    <string name="d">d</string>
    <string name="e">e</string>
    <string name="f">f</string>
    <string name="g">g</string>
    <string name="h">h</string>
</resources>